<resources>
    <string name="app_name">e-commerce</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">it is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="e_commerce">E-commerce.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="addresses">Addresses</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="best_products">Best Products</string>
    <string name="billing">Billing</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="e_commerce_dose_not_support_virtual_payments_you_can_pay_when_you_receive_your_order">e-commerce dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="my_cart">My Cart</string>
    <string name="check_out">Check out</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="total1">Total</string>
    <string name="start">Start</string>
    <string name="e_commerce1">E-commerce.</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login1">Login</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products1">Best Products</string>
    <string name="address">Address</string>
    <string name="full_name1">Full Name</string>
    <string name="address1">Address</string>
    <string name="phone1">Phone</string>
    <string name="products">Products</string>
    <string name="all_orders">All orders</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="category_description">Category Description</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="settings">Settings</string>
    <string name="edit_personal_details">edit personal details</string>
    <string name="orders">Orders</string>
    <string name="all_orders1">All orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="billing1">Billing</string>
    <string name="notifications">Notifications</string>
    <string name="notifications1">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="e_commerce2">E-commerce.</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="do_you_have_an_account_login">Do you have an account? login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="facebook1">Facebook</string>
    <string name="google1">Google</string>
    <string name="register1">Register</string>
    <string name="search_now">Search Now</string>
    <string name="my_account">My account</string>
    <string name="first_name1">First Name</string>
    <string name="last_name1">Last Name</string>
    <string name="email2">Email</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="save1">Save</string>
</resources>